Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-3927

QTreeView auto scroll scrolls to left edge resulting out of the view of an Item.

XMLWordPrintable

      When horizontal scroll bar is scrolled to some column to have view of particular column and when an Item of that column is clicked auto scroll Scrolls to left edge resulting that column out of view.

      How to reproduce with our Dir View example:

      • Run the dirview.exe example.
      • Make the first column about 3 inches wide.
      • Navigate in to a directory level such as C:\Qt\4.5.0.
      • Resize the window so that it is about one inch wide.
      • Scroll to the right so that entries in the selected directory are
        clearly visible.
      • Click on one of the entries in the directory.
      • The tree view should scroll to the left edge of the first column after a slight delay.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            mitch_curtis Mitch Curtis
            smk smk
            Votes:
            4 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:

                There are no open Gerrit changes